# stm32-emo-deck-robot

./: 引脚定义文档.md  表情命令文档.md
emo-desk-robot-esp32/main/: CMakeLists.txt  idf_component.yml  lucy_audio.c  lucy_audio.h  lucy_board.c  lucy_board.h  lucy_config.h  lucy_sr.c  lucy_sr.h  lucy_wakeup_pcm.c  lucy_wifi.c  lucy_wifi.h  lucy_ws_voice.c  lucy_ws_voice.h  main.c
emo-desk-robot-server/: .clangd  .gitignore  .gitmodules  CMakeLists.txt  audio_codec.cpp  audio_codec.hpp  config.cpp  config.hpp  config.json  llm_client.cpp  llm_client.hpp  main.cpp  mimo_voice_client.cpp  mimo_voice_client.hpp  server.cpp  server.hpp  ws_voice_server.cpp  ws_voice_server.hpp
emo-desk-robot-server/build-zoo-check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  emo-desk-robot-server.slnx  emo-desk-robot-server.vcxproj  emo-desk-robot-server.vcxproj.filters
emo-desk-robot-server/build-zoo-check/Debug/: config.json
emo-desk-robot-server/build-zoo-check/emo-desk-robot-server.dir/Debug/: emo-desk-robot-server.exe.recipe
emo-desk-robot-server/build-zoo-check/emo-desk-robot-server.dir/Debug/emo-desk.A5989644.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  emo-desk-robot-server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
emo-desk-robot-server/build-zoo-check/libwebsockets/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  GENHDR.vcxproj  GENHDR.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  LibwebsocketsTargets.cmake  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  dist.vcxproj  dist.vcxproj.filters  libwebsockets-config-version.cmake  libwebsockets-config.cmake  libwebsockets.slnx  lws_config_private.h
emo-desk-robot-server/build-zoo-check/libwebsockets/include/: lws_config.h
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  websockets.vcxproj  websockets.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/core/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/core-net/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/event-libs/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/media/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/misc/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/roles/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/secure-streams/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lib/system/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/lwsws/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/plugins/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters
emo-desk-robot-server/build-zoo-check/libwebsockets/win32port/: version.rc
emo-desk-robot-server/build-zoo-check/opus/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Opus.slnx  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  opus.vcxproj  opus.vcxproj.filters  test_opus_api.vcxproj  test_opus_api.vcxproj.filters  test_opus_decode.vcxproj  test_opus_decode.vcxproj.filters  test_opus_encode.vcxproj  test_opus_encode.vcxproj.filters  test_opus_extensions.vcxproj  test_opus_extensions.vcxproj.filters  test_opus_padding.vcxproj  test_opus_padding.vcxproj.filters
emo-desk-robot-server/build-zoo-check/opus/test_opus_api.dir/Debug/: test_opus_api.exe.recipe
emo-desk-robot-server/docs/: esp32_websocket_voice_protocol.md
emo-desk-robot-server/libwebsockets/win32port/zlib/: trees.c
emo-desk-robot-server/tests/: mic_mimo_asr.py  mic_mimo_tts.py  test_esp32_ws_voice.py
(+313 files in other folders)
